Disconnect before destroying items

Destroying them causes us to get a visibleChanged signal
BUG:436707